# wmt-platform

./: docker-compose.yml
analyzers/dwtsvd-watermarking/: API.cpp  CMakeLists.txt  DWT.cpp  DWT.h  DWTHDSVD.h  DWTSVD.h  Dockerfile  Hess.h  Model.h  Unwatermark.cpp  Unwatermark.h  Watermark.cpp  Watermark.h  base64.h  strategy.json
analyzers/sharif-wm/: .gitignore  Dockerfile  api.py  embed.py  extract.py  requirements.txt  strategy.json  util.py
analyzers/sharif-wm/configs/: all_augs.yaml  all_augs_multi_wm.yaml  attenuation.yaml  embedder.yaml  extractor.yaml
client/: Dockerfile  package-lock.json  package.json  tsconfig.json
client/app/: app.css  root.tsx  routes.ts
client/app/components/: AttackControls.tsx  AuthenticationForm.tsx  FontProps.tsx  ImageCanvas.tsx  ImageProcessor.tsx  ImageUploader.tsx  ImageWatermarkSettings.tsx  LoginForm.tsx  RegisterForm.tsx  Sidebar.tsx  Size.ts  TextWatermarkSettings.tsx  Topbar.tsx  WatermarkAnalysis.tsx  WatermarkControls.tsx  WatermarkCreator.tsx  WatermarkGenProps.ts  WatermarkSetting.tsx
client/app/models/: EnvironmentManager.ts  ImageUploaderToWatermark.ts
client/app/providers/: AuthProvider.tsx
client/app/routes/: analyze.tsx  assets.tsx  design.tsx  home.tsx  index.tsx  login.tsx  register.tsx  upload.tsx  watermark.tsx  watermarking.tsx  watermarks.tsx
client/app/utils/: ColorUtil.tsx
client/src/: App.tsx  axios_config.ts  index.tsx
client/src/components/: AuthenticationForm.tsx  ImageCanvas.tsx  ImageUploader.tsx  LoginForm.tsx  RegisterForm.tsx  Sidebar.tsx  WatermarkCreator.tsx
client/src/models/: ImageAttackUpload.ts  ImageUploaderToWatermark.ts  OutputFile.ts
client/src/pages/: analyze.tsx  assets.tsx  index.tsx  login.tsx  watermark.tsx  watermarking.tsx  watermarks.tsx
client/src/providers/: AuthProvider.tsx
client/src/utils/: importAllPages.ts
server/: .dockerignore  .env  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
server/src/: dwthdsvdapi_test.ts  index.ts
server/src/attacks/: attack.ts
server/src/controller/: gaussian_noise.ts  scale.ts
server/src/handlers/: apply.ts  auth.ts  files.ts  project.ts
server/src/managers/: DatabaseManager.ts
server/src/middleware/: AuthMiddleware.ts
server/src/models/: FileRequest.ts  files.ts  (+2 more)
test-api/: dwtsvd-watermarking.rest  node.rest  sharif-wm.rest
test-api/nodeserver/: apply.rest  auth.rest  project.rest  strategy.rest  upload.rest
(+46 files in other folders)
